# flight-delay-explorer

./: .coveragerc  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml
.claude/commands/: context_prime.md
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
data/: 2025-06-07.json
specs/: core-package-structure.md  refactor-tests-for-dot-env.md
src/: main.py
src/flight_delay_explorer/: __init__.py  cli.py  config.py  main.py  models.py
src/flight_delay_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flight_delay_explorer/api/: __init__.py  client.py
src/flight_delay_explorer/parsers/: __init__.py  data_parser.py
src/flight_delay_explorer/utils/: __init__.py  logging.py
tests/: test_api_client.py  test_basic.py  test_cli.py  test_cli_integration.py  test_config.py  test_data_parser.py  test_dev_tools.py  test_git_workflows.py  test_integration.py  test_logging.py  test_models.py  test_tool_execution.py  test_version_control.py
tests/fixtures/: sample_flight_data.json
