[project]
name = "flight-delay-explorer"
version = "0.1.0"
description = "CLI tool for analyzing airline on-time performance data"
authors = [
    { name="Robert Pratt", email="robert@bpong.me" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "matplotlib",
    "argparse"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.mypy]
python_version = 3.8
strict = true

[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = [
    "tests"
]
