[project]
name = "flight-delay-explorer"
version = "0.1.0"
description = "CLI tool to process airline on-time performance CSV data (like DOT datasets) to generate summary reports including average delays by airline/airport, monthly trends, and delay distribution histograms. It's part of a personal learning project focused on Python, CQRS/event sourcing, and AI engineering skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.3",
    "rich>=13.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-httpx>=0.30.0",
    "respx>=0.20.0",
    "ruff>=0.11.13",
]
