[project]
name = "flight-delay-explorer"
version = "0.1.0"
description = "CLI tool to process airline on-time performance CSV data (like DOT datasets) to generate summary reports including average delays by airline/airport, monthly trends, and delay distribution histograms. It's part of a personal learning project focused on Python, CQRS/event sourcing, and AI engineering skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.3",
    "rich>=13.0.0",
    "typer>=0.16.0",
]


[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-httpx>=0.30.0",
    "respx>=0.20.0",
    "ruff>=0.11.13",
]


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "SIM", "RET", "PTH"]



[tool.mypy]
python_version = "3.12"
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
# no_implicit_optional = true
# strict_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true

# Fix import errors
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
namespace_packages = true

# Ignore missing imports for third-party libraries
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
